NYSD9-829: Quick Facts Element Overlap Issue Fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-promotional-banner/nysenate-promotional-banner.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-promotional-banner/nysenate-promotional-banner.scss
@@ -203,4 +203,8 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 40px;
   }
+
+  .c-block--initiative__has-img:not(:first-child) img {
+    display: none;
+  }  
 }
